--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     implementation 'com.jpardogo.googleprogressbar:library:1.2.0'               //progress bar
     implementation 'androidx.viewpager2:viewpager2:1.0.0'                       //viewpager2
     implementation 'com.google.android.material:material:1.3.0-alpha04'         //tablayout
+    implementation 'com.google.android.material:material:1.7.0'                 //material (for recyclerView)
 
 }
