--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,9 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'                       //viewpager2
     implementation 'com.google.android.material:material:1.3.0-alpha04'         //tablayout
     implementation 'com.google.android.material:material:1.7.0'                 //material (for recyclerView)
+    def lifecycle_version = "2.3.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
 
 }
